LayoutTests:

Reviewed by Adele.

        - test for http://bugs.webkit.org/show_bug.cgi?id=13857
          REGRESSION: onChange function applied to select element executes twice when focus is set

        * fast/forms/select-double-onchange-expected.txt: Added.
        * fast/forms/select-double-onchange.html: Added.

WebCore:

        Reviewed by Adele.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13857
          REGRESSION: onChange function applied to select element executes twice when focus is set

        Test: fast/forms/select-double-onchange.html

        * html/HTMLSelectElement.cpp:
        (WebCore::HTMLSelectElement::menuListOnChange): Changed to update m_lastOnChangeIndex
        before dispatching the change event to avoid reentrancy.



Canonical link: https://commits.webkit.org/18142@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21734 268f45cc-cd09-0410-ab3c-d52691b4dbfc